@@ -12,6 +12,11 @@
 			$list: $( '.hiddencats ul' ),
 			$toggler: $( '.mw-hiddenCategoriesExplanation' ),
 			cookieName: 'hidden-categories-list'
+		},
+		{
+			$list: $( '.preview-limit-report-wrapper' ),
+			$toggler: $( '.mw-limitReportExplanation' ),
+			cookieName: 'preview-limit-report'
 		}
 	];
 
